# wazuh-tenant-orchestrator

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  config.py  dependencies.py  main.py  schemas.py
api/routes/: health.py  tenants.py
config/: API_SPEC.json
core/: exceptions.py  logger.py  opensearch_client.py  utils.py  wazuh_client.py
tests/: __init__.py  conftest.py  test_api.py  test_opensearch_client.py  test_utils.py  test_wazuh_client.py
