[tool.poetry]
name = "wazuh-tenant-orchestrator"
version = "0.1.0"
description = "CLI tool for automated multi-tenant provisioning on Wazuh SIEM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["wazuh", "siem", "multi-tenancy", "msp", "security", "opensearch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/wazuh-tenant-orchestrator"
Repository = "https://github.com/yourusername/wazuh-tenant-orchestrator"
Issues = "https://github.com/yourusername/wazuh-tenant-orchestrator/issues"

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.5"
python-dotenv = ">=1.0.0"
urllib3 = ">=2.0.0"
fastapi = ">=0.115.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-mock = ">=3.12.0"
pytest-cov = ">=4.1.0"  # Code coverage reporting
pre-commit = ">=3.6.0"  # Git hooks for code quality
httpx = ">=0.27.0"  # For FastAPI test client

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=core --cov=api --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["core", "api"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

# Ruff configuration (linter + formatter)
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", "__pycache__", ".git"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting)
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

# Bandit security scanner configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert warnings (OK in tests)
